--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        <div class="hx-detail-item">
         <span class="hx-detail-item-label">性别</span>
         <div class="hx-detail-item-field">
-         女        </div>
+         男        </div>
        </div>
        <div class="hx-detail-item">
         <span class="hx-detail-item-label">学院</span>
@@ -129,12 +129,12 @@
          <div class="hx-detail-item">
           <span class="hx-detail-item-label">离校时间</span>
           <div class="hx-detail-item-field">
-           2022-03-02 14:00          </div>
+           2022-03-04 11:00          </div>
          </div>
          <div class="hx-detail-item">
           <span class="hx-detail-item-label">返校时间</span>
           <div class="hx-detail-item-field">
-           2022-03-02 23:59          </div>
+           2022-03-04 23:59          </div>
          </div>
          <div class="hx-detail-item">
           <span class="hx-detail-item-label">目的地</span>
